<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="text">텍스트</string>
    <string name="button">Button</string>

    <!--    회원가입-->
    <string name="signup_welcome">ZET와 함께 제로콜라 최저가 탐색 시작해요</string>
    <string name="start_with_kakao">카카오로 시작하기</string>
    <string name="start_with_non_member"><u>비회원으로 시작하기</u></string>
    <string name="non_member">비회원</string>
    <string name="login_success">로그인 성공</string>
    <string name="login_fail">로그인 실패</string>

    <!--    시작 화면-->
    <string name="entry_welcome">최저가 할인 정보와 실시간\n 가격변동 소식을 간편하게 받아봐요</string>
    <string name="term_introduce">서비스 시작 시 이용약관 및 개인정보처리방침에 동의 처리됩니다.</string>
    <string name="entry_start">ZET와 최저가 탐색 시작하기</string>

    <!--    초기 설정-->
    <string name="customer">님,</string>
    <string name="welcome_nickname_setting">몇 가지 더 설정하고\n함께 최저가 콜라 즐겨요!</string>
    <string name="next">다음</string>
    <string name="step_forward">계속하기</string>
    <string name="welcome_shopping_setting">%s 님,\n어떤 쇼핑몰에서 \n가격을 탐지할까요?</string>
    <string name="welcome_card_setting">어떤 카드의 \n할인 혜택 알림을 \n받아볼까요?</string>
    <string name="can_change_card_text">선택한 정보는 ZET 홈의 \&apos;최저가 탐색 조건 설정\&apos;에서\n언제든 변경할 수 있어요.</string>
    <string name="current_step">%d/3</string>
    <string name="complete">완료</string>
    <string name="invalid_nickname">특수문자, 이모티콘은 입력할 수 없어요.</string>
    <string name="sign_up_and_unlock">회원가입 하고 잠금 풀기</string>

    <!--    쇼핑몰 및 카드사-->
    <string name="all">전체</string>
    <string name="coupang">쿠팡</string>
    <string name="gmarket">G마켓</string>
    <string name="eleventh_street">11번가</string>
    <string name="naver">네이버</string>
    <string name="market_kurly">마켓컬리</string>

    <!--    상품 정보-->
    <string name="setting_lowest_price">최저가 탐색 조건 설정</string>
    <string name="brand">브랜드</string>
    <string name="volume">용량</string>
    <string name="shopping_mall">쇼핑몰</string>
    <string name="discount_rate">할인율</string>
    <string name="card_favor">카드혜택</string>
    <string name="card_discount">카드할인</string>
    <string name="introduce_product_list">*100ml당 가격이 낮은 순으로 소개해 드려요.</string>
    <string name="find_more">더보기</string>

    <string name="nonghyup">농협</string>
    <string name="kookmin">국민</string>
    <string name="shinhan">신한</string>
    <string name="lotte">롯데</string>
    <string name="hana">하나</string>
    <string name="samgsung">삼성</string>
    <string name="city">시티</string>
    <string name="woori">우리</string>
    <string name="hyundai">현대</string>
    <string name="bc">BC</string>

    <!--    내정보-->
    <string name="mypage_customer">님</string>
    <string name="mypage_singup_text">회원가입으로 맞춤 정보를 받아보세요!</string>
    <string name="welcome_text">오늘도 시원한 콜라 한 잔 하셨나요?</string>
    <string name="my_info">내정보</string>
    <string name="set_price_notification">가격 알림 설정</string>
    <string name="announcement">공지사항</string>
    <string name="ask_question">문의하기</string>
    <string name="service_term">서비스 이용약관</string>
    <string name="personal_information_term">개인정보 처리방침</string>
    <string name="logout">로그아웃</string>
    <string name="withdraw">회원탈퇴</string>
    <string name="confirm_logout">로그아웃하시겠어요?</string>
    <string name="withdraw_title">ZET와의 최저가 탐색을 정말 그만두시겠어요?</string>
    <string name="withdraw_warning">확인 시 바로 탈퇴됩니다.</string>

    <!--    가격 알림 설정-->
    <string name="notification_description">가격 알림을 받고 싶은 항목의 알림을 설정해주세요.</string>
    <string name="hot_deal">핫딜</string>
    <string name="lowest_price">최저가</string>
    <string name="price_change">가격변동</string>
    <string name="night_notification">야간 알림</string>

    <!--    최저가 탐색 조건-->
    <string name="coca_cola">코카콜라</string>
    <string name="pepsi">펩시</string>

    <string name="volume_190">190ml~210ml</string>
    <string name="volume_210">210ml</string>
    <string name="volume_350">350ml</string>
    <string name="volume_355">355ml</string>

    <string name="zetpick">제트픽</string>
    <string name="large_discount">대박</string>
    <string name="middle_discount">중박</string>
    <string name="low_discount">소박</string>
    <string name="normal">일반</string>

    <!--    제품 상세-->
    <string name="coca_cola_drink">코카콜라 음료</string>
    <string name="pepsi_drink">펩시 음료</string>
    <string name="unit_price">100ml당</string>
    <string name="store_site">판매처</string>
    <string name="delivery_fee">배송비</string>
    <string name="discount_card">카드할인</string>
    <string name="buy_with_lowest_price">최저가로 구매하기</string>
    <string name="compare_price">가격비교</string>
    <string name="price_graph_tooltip_description">\'최저가 그래프\'는 ZET에서 수집한 가격 정보를 바탕으로\n 최고가와 최저가를 100ml당 가격으로 환산하여 계산합니다.\n이를 5분위로 나누어 제품의 가격 수준을 한눈에 파악할 수\n있도록 제공합니다.</string>
    <string name="price_comparison_tooltip_description">내가 설정한 쇼핑몰 외의 사이트 최저가도 함께 갖고 왔어요.\n카드 혜택의 경우 조건이 있을 수 있어요.</string>

    <string name="contains_delivery_fee">배송비 포함</string>

    <!--    제품정보-->
    <string name="product_information">제품정보</string>
    <string name="product_type">식품 유형</string>
    <string name="wrap_type">포장 형태</string>
    <string name="number">개수</string>
    <string name="point">특징</string>

    <string name="not_support_feature">현재 지원하지 않는 기능입니다.</string>
</resources>