<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <import type="buy.coke.zet.common.designsystem.TopBarStyle.Image"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".product.list.ProductListActivity">

        <buy.coke.zet.common.designsystem.topbar.TopBar
            android:id="@+id/product_list_topbar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginBottom="8dp"
            app:leftIconImage="@{Image.LOGO}"
            app:rightFirstIconImage="@{Image.NOTIFICATION}"
            app:rightSecondIconImage="@{Image.GRAPH}"
            app:rightThirdIconImage="@{Image.PERSON}"
            app:layout_constraintTop_toTopOf="parent"/>
        
        <ImageView
            android:id="@+id/advertise_banner"
            android:layout_width="match_parent"
            android:layout_height="98dp"
            app:layout_constraintTop_toBottomOf="@id/product_list_topbar"/>

        <TextView
            android:id="@+id/setting_lowest_price_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/setting_lowest_price"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/advertise_banner" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/setting_lowest_price_text">

            <TextView
                android:id="@+id/brand_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/brand"
                android:textColor="@color/gray_500"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/volume_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="14dp"
                android:text="@string/volume"
                android:textColor="@color/gray_500"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/brand_title"/>

            <TextView
                android:id="@+id/shopping_mall_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="14dp"
                android:text="@string/shopping_mall"
                android:textColor="@color/gray_500"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/volume_title"/>

            <TextView
                android:id="@+id/discount_rate_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="14dp"
                android:text="@string/discount_rate"
                android:textColor="@color/gray_500"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/shopping_mall_title"/>

            <TextView
                android:id="@+id/card_favor_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="14dp"
                android:text="@string/card_discount"
                android:textColor="@color/gray_500"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/discount_rate_title"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

