<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="buy.coke.zet.common.designsystem.TopBarStyle"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_800"
        tools:context=".info.notification_setting.NotificationSettingActivity">

        <buy.coke.zet.common.designsystem.topbar.TopBar
            android:id="@+id/notification_topbar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            app:layout_constraintTop_toTopOf="parent"
            app:leftIconImage="@{TopBarStyle.Image.BACK}"
            app:leftText="@{@string/set_price_notification}"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/notification_intro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:text="@string/notification_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/notification_topbar" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/hot_deal_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="43dp"
            android:text="@string/hot_deal"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/notification_intro"/>

        <buy.coke.zet.common.designsystem.statebutton.SwitchButton
            android:id="@+id/hot_deal_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="43dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/notification_intro" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/lowest_price_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="46dp"
            android:text="@string/lowest_price"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hot_deal_title"/>

        <buy.coke.zet.common.designsystem.statebutton.SwitchButton
            android:id="@+id/lowest_price_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hot_deal_button" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/price_change_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="46dp"
            android:text="@string/price_change"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lowest_price_title"/>

        <buy.coke.zet.common.designsystem.statebutton.SwitchButton
            android:id="@+id/price_change_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lowest_price_button" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/night_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="46dp"
            android:text="@string/night_notification"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/price_change_title"/>

        <buy.coke.zet.common.designsystem.statebutton.SwitchButton
            android:id="@+id/night_notification_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/price_change_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

