<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="buy.coke.zet.common.designsystem.LogoButtonStyle.BrandName"/>
        <import type="buy.coke.zet.common.designsystem.RoundButtonStyle"/>
        <variable
            name="nickname"
            type="java.lang.String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="setting.ShoppingListSettingActivity">

        <TextView
            android:id="@+id/second_step_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/gray_600"
            android:text="@{@string/current_step(3)}"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/card_welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="44dp"
            android:textSize="24sp"
            android:text="@{@string/welcome_card_setting}"
            app:layout_constraintTop_toBottomOf="@id/second_step_text"
            app:layout_constraintStart_toStartOf="parent"/>

        <buy.coke.zet.common.designsystem.statebutton.LogoButton
            android:id="@+id/icon_nonghyup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:brand="@{BrandName.NONGHYUP}"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/icon_kookmin"
            app:layout_constraintTop_toBottomOf="@id/card_welcome_text"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_nonghyup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/gray_500"
            android:textSize="14sp"
            android:text="@string/nonghyup"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/icon_nonghyup"
            app:layout_constraintStart_toStartOf="@id/icon_nonghyup"
            app:layout_constraintEnd_toEndOf="@id/icon_nonghyup"/>

        <buy.coke.zet.common.designsystem.statebutton.LogoButton
            android:id="@+id/icon_kookmin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="18dp"
            app:brand="@{BrandName.KOOKMIN}"
            app:layout_constraintStart_toEndOf="@id/icon_nonghyup"
            app:layout_constraintEnd_toStartOf="@id/icon_shinhan"
            app:layout_constraintTop_toBottomOf="@id/card_welcome_text"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_kookmin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/gray_500"
            android:textSize="14sp"
            android:text="@string/kookmin"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/icon_kookmin"
            app:layout_constraintStart_toStartOf="@id/icon_kookmin"
            app:layout_constraintEnd_toEndOf="@id/icon_kookmin"/>

        <buy.coke.zet.common.designsystem.statebutton.LogoButton
            android:id="@+id/icon_shinhan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="18dp"
            app:brand="@{BrandName.SHINHAN}"
            app:layout_constraintStart_toEndOf="@id/icon_kookmin"
            app:layout_constraintEnd_toStartOf="@id/icon_lotte"
            app:layout_constraintTop_toBottomOf="@id/card_welcome_text"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_shinhan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/gray_500"
            android:textSize="14sp"
            android:text="@string/shinhan"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/icon_shinhan"
            app:layout_constraintStart_toStartOf="@id/icon_shinhan"
            app:layout_constraintEnd_toEndOf="@id/icon_shinhan"/>

        <buy.coke.zet.common.designsystem.statebutton.LogoButton
            android:id="@+id/icon_lotte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="18dp"
            app:brand="@{BrandName.LOTTE}"
            app:layout_constraintStart_toEndOf="@id/icon_shinhan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_welcome_text"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_lotte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/gray_500"
            android:textSize="14sp"
            android:text="@string/lotte"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/icon_lotte"
            app:layout_constraintStart_toStartOf="@id/icon_lotte"
            app:layout_constraintEnd_toEndOf="@id/icon_lotte"/>

        <buy.coke.zet.common.designsystem.statebutton.LogoButton
            android:id="@+id/icon_hana"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            app:brand="@{BrandName.HANA}"
            app:layout_constraintStart_toStartOf="@id/icon_nonghyup"
            app:layout_constraintEnd_toEndOf="@id/icon_nonghyup"
            app:layout_constraintTop_toBottomOf="@id/icon_nonghyup"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_hana"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/gray_500"
            android:textSize="14sp"
            android:text="@string/hana"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/icon_hana"
            app:layout_constraintStart_toStartOf="@id/icon_hana"
            app:layout_constraintEnd_toEndOf="@id/icon_hana"/>

        <buy.coke.zet.common.designsystem.statebutton.LogoButton
            android:id="@+id/icon_samgsung"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            app:brand="@{BrandName.SAMGSUNG}"
            app:layout_constraintStart_toStartOf="@id/icon_kookmin"
            app:layout_constraintEnd_toEndOf="@id/icon_kookmin"
            app:layout_constraintTop_toBottomOf="@id/icon_kookmin"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_samgsung"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/gray_500"
            android:textSize="14sp"
            android:text="@string/samgsung"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/icon_samgsung"
            app:layout_constraintStart_toStartOf="@id/icon_samgsung"
            app:layout_constraintEnd_toEndOf="@id/icon_samgsung"/>

        <buy.coke.zet.common.designsystem.statebutton.LogoButton
            android:id="@+id/icon_hyundai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            app:brand="@{BrandName.HYUNDAI}"
            app:layout_constraintStart_toStartOf="@id/icon_shinhan"
            app:layout_constraintEnd_toEndOf="@id/icon_shinhan"
            app:layout_constraintTop_toBottomOf="@id/icon_shinhan"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_hyundai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/gray_500"
            android:textSize="14sp"
            android:text="@string/hyundai"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/icon_hyundai"
            app:layout_constraintStart_toStartOf="@id/icon_hyundai"
            app:layout_constraintEnd_toEndOf="@id/icon_hyundai"/>

        <buy.coke.zet.common.designsystem.statebutton.LogoButton
            android:id="@+id/icon_woori"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            app:brand="@{BrandName.WOORI}"
            app:layout_constraintStart_toStartOf="@id/icon_lotte"
            app:layout_constraintEnd_toEndOf="@id/icon_lotte"
            app:layout_constraintTop_toBottomOf="@id/icon_lotte"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_woori"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/gray_500"
            android:textSize="14sp"
            android:text="@string/woori"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/icon_woori"
            app:layout_constraintStart_toStartOf="@id/icon_woori"
            app:layout_constraintEnd_toEndOf="@id/icon_woori"/>

        <buy.coke.zet.common.designsystem.statebutton.LogoButton
            android:id="@+id/icon_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            app:brand="@{BrandName.CITY}"
            app:layout_constraintStart_toStartOf="@id/icon_hana"
            app:layout_constraintEnd_toEndOf="@id/icon_hana"
            app:layout_constraintTop_toBottomOf="@id/icon_hana"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/gray_500"
            android:textSize="14sp"
            android:text="@string/city"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/icon_city"
            app:layout_constraintStart_toStartOf="@id/icon_city"
            app:layout_constraintEnd_toEndOf="@id/icon_city"/>

        <buy.coke.zet.common.designsystem.statebutton.LogoButton
            android:id="@+id/icon_bc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            app:brand="@{BrandName.BC}"
            app:layout_constraintStart_toStartOf="@id/icon_samgsung"
            app:layout_constraintEnd_toEndOf="@id/icon_samgsung"
            app:layout_constraintTop_toBottomOf="@id/icon_samgsung"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_bc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/gray_500"
            android:textSize="14sp"
            android:text="@string/bc"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/icon_bc"
            app:layout_constraintStart_toStartOf="@id/icon_bc"
            app:layout_constraintEnd_toEndOf="@id/icon_bc"/>

        <buy.coke.zet.common.designsystem.normalbutton.RoundButton
            android:id="@+id/next_button"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="16dp"
            app:mainColor="@{RoundButtonStyle.Color.GRAY}"
            app:buttonText="@{@string/next}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

